--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ form textarea {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
-  *zoom: 1; }
+  }
   .container:after {
     content: " ";
     clear: both;
@@ -296,8 +296,7 @@ form textarea {
   margin-right: auto;
   margin-left: auto;
   padding-left: 15px;
-  padding-right: 15px;
-  *zoom: 1; }
+  padding-right: 15px; }
   .container-fluid:after {
     content: " ";
     clear: both;
@@ -307,8 +306,7 @@ form textarea {
 
 .row {
   margin-left: -15px;
-  margin-right: -15px;
-  *zoom: 1; }
+  margin-right: -15px; }
   .row:after {
     content: " ";
     clear: both;
@@ -1118,10 +1116,10 @@ form textarea {
  * Header Styles
  */
 .site-header .top-header {
-  padding: 30px 0; }
+  background-color: #ced3d8; ;
+  padding: 10px 0; }
 .site-header .bottom-header {
-  background-color: #4a4c4e;
-  *zoom: 1;
+  background-color: #4a4c4e; ;
   padding: 20px 0; }
   .site-header .bottom-header:after {
     content: " ";
@@ -1135,7 +1133,7 @@ form textarea {
 
 #branding {
   float: left; }
-  #branding .logo, #branding .logo-text {
+  #branding .logo, #branding .logo-text, #branding  {
     display: inline-block;
     vertical-align: middle; }
   #branding .logo {
@@ -1147,7 +1145,7 @@ form textarea {
     #branding .site-title a {
       color: #768089; }
 
-.right-section .phone, .right-section .search-form {
+.right-section .phone, .right-section {
   display: inline-block;
   vertical-align: middle;
   position: relative; }
@@ -1156,19 +1154,6 @@ form textarea {
     display: none; } }
 .right-section .phone img {
   vertical-align: middle; }
-.right-section .search-form {
-  margin: 10px 0;
-  margin-left: 20px; }
-  @media screen and (max-width: 480px) {
-    .right-section .search-form {
-      display: none; } }
-  .right-section .search-form input {
-    padding-right: 40px; }
-  .right-section .search-form button {
-    position: absolute;
-    right: 0;
-    top: 0;
-    background: none; }
 
 .main-navigation {
   float: left; }
@@ -1212,13 +1197,15 @@ form textarea {
 .social-links {
   float: right; }
   .social-links a {
+    position: relative; 
+    top: 15px;
     width: 30px;
     height: 30px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    border: 1px solid #4a4c4e;
     border-radius: 50%;
     text-align: center;
     line-height: 1.8;
-    color: white;
+    color: #1392ec;
     margin-left: 5px;
     display: inline-block;
     -webkit-transition: .3s ease;
@@ -1261,8 +1248,7 @@ form textarea {
   position: relative;
   margin-bottom: 50px; }
   .hero-slider .slides {
-    list-style: none;
-    *zoom: 1; }
+    list-style: none; }
     .hero-slider .slides:after {
       content: " ";
       clear: both;
@@ -1427,8 +1413,7 @@ form textarea {
   position: relative;
   padding-bottom: 50px; }
   .testimonial-slider .slides {
-    list-style: none;
-    *zoom: 1; }
+    list-style: none;}
     .testimonial-slider .slides:after {
       content: " ";
       clear: both;
@@ -1488,7 +1473,6 @@ form textarea {
     margin: 25px -15px; }
 
 .features {
-  *zoom: 1;
   margin: 0 -15px;
   position: relative;
   z-index: 1; }
@@ -1678,6 +1662,8 @@ form textarea {
     font-weight: 300; }
 
 .contact-form input:not([type="submit"]), .contact-form textarea {
+  position: relative;
+  left: 250px;
   width: 100%;
   margin-bottom: 10px;
   -webkit-transition: .3s ease;
