--- a/style.css
+++ b/style.css
@@ -1779,4 +1779,19 @@ form textarea {
         border-right: none; }
   .site-footer .colophon {
     color: #898b8d; }
+.contact-info {
+  background-color: #f9f9f9;
+  padding: 50px 20px;
+  text-align: center;
+}
 
+.contact-info h3 {
+  margin-bottom: 20px;
+  color: #0f75bd;
+  font-size: 46px;
+}
+
+.contact-info p {
+  margin: 10px 0;
+  font-size: 30px;
+}
