--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h2 {
   margin: 0.83em 0; }
 
 h3 {
-  font-size: 1.17em;
+  font-size: 24px;
   margin: 1em 0; }
 
 h4 {
@@ -1295,67 +1295,96 @@ form textarea {
 
 .hero-slider {
   position: relative;
-  margin-bottom: 50px; }
-  .hero-slider .slides {
-    list-style: none; }
-    .hero-slider .slides:after {
-      content: " ";
-      clear: both;
-      display: block;
-      overflow: hidden;
-      height: 0; }
-    .hero-slider .slides li {
-      min-height: 580px;
-      float: left;
-      margin-right: -100%;
-      width: 100%;
-      background-size: cover;
-      background-position: center center; }
+  margin-bottom: 50px; 
+}
+
+.hero-slider .slides {
+  list-style: none; 
+}
+
+.hero-slider .slides:after {
+  content: " ";
+  clear: both;
+  display: block;
+  overflow: hidden;
+  height: 0; 
+}
+
+.hero-slider .slides li {
+  min-height: 580px;
+  float: left;
+  margin-right: -100%;
+  width: 100%;
+  background-size: cover;
+  background-position: center center;
+}
+
+.hero-slider .slide-content {
+  border-radius: 3px;
+  background-color: white;
+  width: 25%;
+  padding: 30px;
+  margin-top: 50px;
+  margin-bottom: 30px; 
+}
+
+@media screen and (max-width: 990px) {
   .hero-slider .slide-content {
-    border-radius: 3px;
-    background-color: white;
-    width: 25%;
-    padding: 30px;
-    margin-top: 50px;
-    margin-bottom: 30px; }
-    @media screen and (max-width: 990px) {
-      .hero-slider .slide-content {
-        width: 50%; } }
-    @media screen and (max-width: 480px) {
-      .hero-slider .slide-content {
-        width: 100%; } }
-    .hero-slider .slide-content .slide-title {
-      font-size: 35px;
-      font-size: 2.1875em;
-      font-weight: 300;
-      margin-bottom: 30px; }
-      .hero-slider .slide-content .slide-title strong {
-        color: #0f75bd;
-        display: block;
-        font-weight: 300; }
-    .hero-slider .slide-content p {
-      line-height: 2;
-      margin-bottom: 50px; }
-  .hero-slider .flex-control-nav {
-    list-style: none;
-    position: absolute;
-    bottom: -50px;
-    width: 100%;
-    text-align: center; }
-    .hero-slider .flex-control-nav li {
-      display: inline-block;
-      margin: 0 5px; }
-      .hero-slider .flex-control-nav li a {
-        display: block;
-        width: 15px;
-        height: 15px;
-        background-color: #c6c7c7;
-        border-radius: 50%;
-        overflow: hidden;
-        text-indent: -99999px;
-        cursor: pointer; }
-        .hero-slider .flex-control-nav li a.flex-active {
-          background-color: #0f75bd; }
+    width: 50%; 
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .hero-slider .slide-content {
+    width: 100%; 
+  }
+}
+
+.hero-slider .slide-content .slide-title {
+  font-size: 35px;
+  font-size: 2.1875em;
+  font-weight: 300;
+  margin-bottom: 30px; 
+}
+
+.hero-slider .slide-content .slide-title strong {
+  color: #0f75bd;
+  display: block;
+  font-weight: 300; 
+}
+
+.hero-slider .slide-content p {
+  line-height: 2;
+  margin-bottom: 50px; 
+}
+
+.hero-slider .flex-control-nav {
+  list-style: none;
+  position: absolute;
+  bottom: -50px;
+  width: 100%;
+  text-align: center; 
+}
+
+.hero-slider .flex-control-nav li {
+  display: inline-block;
+  margin: 0 5px; 
+}
+
+.hero-slider .flex-control-nav li a {
+  display: block;
+  width: 15px;
+  height: 15px;
+  background-color: #c6c7c7;
+  border-radius: 50%;
+  overflow: hidden;
+  text-indent: -99999px;
+  cursor: pointer; 
+}
+
+.hero-slider .flex-control-nav li a.flex-active {
+  background-color: #0f75bd; 
+}
 
 .fullwidth-block {
   padding: 50px 0; }
